tests/NormalTests/paczka1/small_fuzzy/43094782.err
Error in line 1: NxPV A841 95,5
Error in line 9: SE54PqL A841 237,2
Error in line 6: 5nG3sObD A841 41,8
Error in line 14: 5nG3sObD S394 31,2
